zien24_implementation/org/objects/Invoice_Line__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Id__c</fullName>
        <label>Billable Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Type__c</fullName>
        <label>Billable Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_be_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can be Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deleted_Datetime__c</fullName>
        <label>Deleted Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>31072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_without_VAT__c</fullName>
        <label>Price without VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <label>Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>